--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <!-- TOP BAR -->
     <div class="topbar">
       <div class="logo-compact" aria-label="Logo">
-        <svg viewBox="0 0 24 24" fill="none">
-          <rect x="3" y="3" width="18" height="18" rx="5" fill="#1a2230" />
-          <path d="M7 16l5-8 5 8" stroke="#43d68a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-      </div>
+  <img src="https://jenovatech1.github.io/logo.png" alt="Jenovatech Logo" />
+</div>
       <div class="grow">
         <input id="searchInput" placeholder="Cari…" aria-label="Cari protokol" />
         <button id="btnSearch" class="btn" title="Cari">🔎</button>
@@ -93,3 +90,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
