--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <title>Jenovatech • Project Feed</title>
-    <meta name="theme-color" content="#0b0f14" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+
+  <title>Jenovatech • Project Feed</title>
+  <meta name="description" content="Mobile-first DeFi Project Feed: TVL, Fees/Revenue, Δ7D, harga token, watchlist, dan detail protokol. Data dari DeFiLlama + CoinGecko." />
+
+  <!-- Theming -->
+  <meta name="theme-color" content="#0b0f14" />
+  <meta name="color-scheme" content="dark light" />
+
+  <!-- Canonical & Robots -->
+  <link rel="canonical" href="https://jenovatech1.github.io/project-feed/" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Social preview (OG/Twitter) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Jenovatech • Project Feed" />
+  <meta property="og:description" content="TVL, Fees/Revenue, Δ7D, harga token, watchlist. Data: DeFiLlama + CoinGecko." />
+  <meta property="og:image" content="https://jenovatech1.github.io/logo.png" />
+  <meta property="og:url" content="https://jenovatech1.github.io/project-feed/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jenovatech • Project Feed" />
+  <meta name="twitter:description" content="DeFi dashboard ringan & mobile-first." />
+  <meta name="twitter:image" content="https://jenovatech1.github.io/logo.png" />
+
+  <!-- Icons -->
+  <link rel="icon" href="https://jenovatech1.github.io/logo.png" />
+  <link rel="apple-touch-icon" href="https://jenovatech1.github.io/logo.png" sizes="192x192" />
+  <!-- (Opsional) preload logo supaya topbar muncul cepat -->
+  <link rel="preload" as="image" href="https://jenovatech1.github.io/logo.png" imagesizes="40px" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Performance: preconnect/dns-prefetch ke API yang sering dipakai -->
+  <link rel="dns-prefetch" href="https://api.llama.fi">
+  <link rel="preconnect" href="https://api.llama.fi" crossorigin>
+  <link rel="dns-prefetch" href="https://coins.llama.fi">
+  <link rel="preconnect" href="https://coins.llama.fi" crossorigin>
+  <link rel="dns-prefetch" href="https://api.coingecko.com">
+  <link rel="preconnect" href="https://api.coingecko.com" crossorigin>
+  <link rel="dns-prefetch" href="https://api.github.com">
+  <link rel="preconnect" href="https://api.github.com" crossorigin>
+  <link rel="dns-prefetch" href="https://api.frankfurter.app">
+  <link rel="preconnect" href="https://api.frankfurter.app" crossorigin>
+  <link rel="dns-prefetch" href="https://api.exchangerate.host">
+  <link rel="preconnect" href="https://api.exchangerate.host" crossorigin>
+  <link rel="dns-prefetch" href="https://icons.llama.fi">
+  <link rel="preconnect" href="https://icons.llama.fi" crossorigin>
   </head>
   <link rel="stylesheet" href="style.css" />
   <body>
@@ -90,4 +135,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
