--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
   <link rel="preconnect" href="https://api.exchangerate.host" crossorigin>
   <link rel="dns-prefetch" href="https://icons.llama.fi">
   <link rel="preconnect" href="https://icons.llama.fi" crossorigin>
+
+    <!-- Manifest & icons -->
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="icon" href="https://jenovatech1.github.io/logo.png" />
+  <link rel="apple-touch-icon" href="https://jenovatech1.github.io/logo.png" sizes="192x192" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   </head>
   <link rel="stylesheet" href="style.css" />
   <body>
@@ -135,5 +142,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
