--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <div class="controls">
         <button id="btnPrefs" class="icon-btn" title="Pengaturan">⚙️</button>
         <button id="btnRefresh" class="icon-btn" title="Reload">↻</button>
+        <button id="btnInstall" class="icon-btn" title="Install App" hidden>⬇️</button>
       </div>
     </div>
 
@@ -142,6 +143,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
