--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <!-- STICKY SUBBAR -->
     <div class="subbar">
       <select id="selChain" title="Filter chain" aria-label="Filter chain"></select>
+      <span id="chainEnhanceMount"></span>
       <select id="selHas" title="Filter data" aria-label="Filter data"></select>
       <button id="btnSort" class="btn btn-sort" aria-haspopup="menu" aria-expanded="false" aria-controls="popSort"><span class="chip-icon">↕</span><span id="btnSortLabel">Sort</span></button>
     </div>
@@ -142,6 +143,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
